# mruby-android

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yume190/mruby/: Lib.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/CMRuby/include/: module.modulemap
app/src/main/jni/CMRuby/mrbgems/mruby-compiler/core/: y.tab.c
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
lib/src/androidTest/java/com/example/mruby/: ExampleInstrumentedTest.java
lib/src/test/java/com/example/mruby/: ExampleUnitTest.java
mruby/: build.gradle
mruby/src/androidTest/java/com/yume190/mruby/: CompileTest.java
mruby/src/main/java/com/yume190/mruby/: MRuby.kt
mruby/src/main/jni/: CMakeLists.txt
mruby/src/main/jni/CMRuby/: public.c
mruby/src/main/jni/CMRuby/include/mruby/: string.h
mruby/src/test/java/com/yume190/mruby/: ExampleUnitTest.java
